[project]
name = "label-studio-sdk"
version = "1.0.14.dev"
description = ""
authors = []
requires-python = ">=3.9,<4"
readme = "README.md"
keywords = []
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "Pillow>=10.0.1",
    "appdirs>=1.4.3",
    "datamodel-code-generator==0.26.1",
    "httpx>=0.21.2",
    "ijson>=3.2.3",
    "jsf>=0.11.2,<0.12",
    "jsonschema>=4.23.0",
    "lxml>=4.2.5",
    "nltk>=3.9.1,<4",
    "numpy>=1.26.4,<3.0.0",
    "opencv-python>=4.9.0,<5",
    "pandas>=0.24.0",
    "pydantic>= 1.9.2",
    "pydantic-core>=2.18.2,<3",
    "pyjwt>=2.10.1,<3",
    "requests>=2.22.0",
    "requests-mock==1.12.1",
    "typing_extensions>= 4.0.0",
    "ujson>=5.8.0",
    "xmljson==0.2.1",
]

[project.urls]
Repository = "https://github.com/HumanSignal/label-studio-sdk"

[dependency-groups]
dev = [
    "mypy==1.0.1",
    "pytest>=7.4.0,<8",
    "pytest-asyncio>=0.23.5,<0.24",
    "python-dateutil>=2.9.0,<3",
    "types-python-dateutil>=2.9.0.20240316,<3",
    "respx>=0.22.0,<0.23",
    "ruff>=0.5.6,<0.6",
]

[tool.hatch.build.targets.sdist]
include = ["src/label_studio_sdk"]

[tool.hatch.build.targets.wheel]
include = ["src/label_studio_sdk"]

[tool.hatch.build.targets.wheel.sources]
"src/label_studio_sdk" = "label_studio_sdk"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
asyncio_mode = "auto"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 120
